Update StockPortfolioServiceImplTest.java